// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApplicationRouting component with ApplicationDetails should handle correctly if app found 1`] = `
<_translate
  app={
    Object {
      "description": Object {
        "en": "The konnectors manager for Cozy V3",
      },
      "developer": Object {
        "name": "Cozy",
      },
      "editor": "cozy",
      "icon": "<svg></svg>",
      "installed": true,
      "isInRegistry": true,
      "name": Object {
        "en": "Collect",
      },
      "related": "http://collect.cozy.mock/",
      "slug": "collect",
      "uninstallable": false,
      "version": "3.0.0",
      "versions": Object {
        "beta": Array [
          "3.0.0",
        ],
        "dev": Array [
          "3.0.0",
        ],
        "stable": Array [
          "3.0.0",
        ],
      },
    }
  }
  parent="myapps"
/>
`;

exports[`ApplicationRouting component with Modal should handle correctly if installed app found 1`] = `
<_translate
  app={
    Object {
      "description": Object {
        "en": "The konnectors manager for Cozy V3",
      },
      "developer": Object {
        "name": "Cozy",
      },
      "editor": "cozy",
      "icon": "<svg></svg>",
      "installed": true,
      "isInRegistry": true,
      "name": Object {
        "en": "Collect",
      },
      "related": "http://collect.cozy.mock/",
      "slug": "collect",
      "uninstallable": false,
      "version": "3.0.0",
      "versions": Object {
        "beta": Array [
          "3.0.0",
        ],
        "dev": Array [
          "3.0.0",
        ],
        "stable": Array [
          "3.0.0",
        ],
      },
    }
  }
  error={undefined}
  parent="/myapps"
  uninstallApp={[Function]}
/>
`;

exports[`ApplicationRouting component with Modal should handle correctly if uninstalled app found 1`] = `
<Connect(_translate)
  app={
    Object {
      "description": Object {
        "en": "The photos manager for Cozy V3",
      },
      "developer": Object {
        "name": "Cozy",
      },
      "editor": "cozy",
      "icon": "<svg></svg>",
      "isInRegistry": true,
      "name": Object {
        "en": "Photos",
      },
      "slug": "photos",
      "uninstallable": true,
      "versions": Object {
        "beta": Array [
          "3.0.0",
        ],
        "dev": Array [
          "3.0.0",
        ],
        "stable": Array [
          "3.0.0",
        ],
      },
    }
  }
  error={undefined}
  installApp={undefined}
  isInstalling={undefined}
  parent="/myapps"
/>
`;
